force-app/main/default/objects/Opportunity/fields/b2c_Diagnostic_Paid__c.field-meta.xml
<CustomField>
    <fullName>b2c_Diagnostic_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>B2C South Africa only. Diagnostic sessions are paid services in South Africa.</description>
    <inlineHelpText>B2C South Africa only.</inlineHelpText>
    <label>Diagnostic Paid</label>
    <type>Checkbox</type>
</CustomField>