force-app/main/default/objects/Opportunity/fields/b2c_Parent_keen_to_reschedule__c.field-meta.xml
<CustomField>
    <fullName>b2c_Parent_keen_to_reschedule__c</fullName>
    <description>B2C only. If the Diagnostic did not run, would parent like to reschedule? This is filled in by the diagnostic consultant while filling webform.</description>
    <inlineHelpText>If the Diagnostic did not run, would parent like to reschedule?</inlineHelpText>
    <label>Parent keen to reschedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>