force-app/main/default/objects/Opportunity/fields/b2c_Student_Feedback_Form_Link__c.field-meta.xml
<CustomField>
    <fullName>b2c_Student_Feedback_Form_Link__c</fullName>
    <description>B2C Only. Feedback form link shared with Student by Coach to collect session related feedback</description>
    <formula>&quot;https://elevateeducation.tfaforms.net/141?Id=&quot; + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>B2C Only. Feedback form link shared with Student by Coach to collect session related feedback</inlineHelpText>
    <label>Student Feedback Form Link</label>
    <type>Text</type>
</CustomField>