force-app/main/default/objects/Opportunity/fields/Buyer_Need__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Need__c</fullName>
    <description>Needs of the student that have prompted the parent to reach out</description>
    <inlineHelpText>Needs of the student that have prompted the parent to reach out</inlineHelpText>
    <label>Buyer Need</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Buyer_Need</valueSetName>
    </valueSet>
</CustomField>