force-app/main/default/objects/Opportunity/fields/Buyer_Need_Comments__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Need_Comments__c</fullName>
    <label>Buyer Need Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>