force-app/main/default/objects/Opportunity/fields/Cancelled_Rebooked__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Rebooked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancelled - Rebooked</label>
    <type>Checkbox</type>
</CustomField>