force-app/main/default/objects/Opportunity/fields/Create_Deposit_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Create_Deposit_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field was created to trigger automatic deposit invoice creation using MuleSoft</description>
    <inlineHelpText>Select this to automatically create Deposit Invoice using MuleSoft</inlineHelpText>
    <label>Create Deposit Invoice</label>
    <type>Checkbox</type>
</CustomField>