force-app/main/default/objects/Opportunity/fields/Created_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_1__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date 1</label>
    <type>Date</type>
</CustomField>