force-app/main/default/objects/Opportunity/fields/Deposit_Invoice_Created__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Invoice_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field was created so deposit invoice creation is recorded through MuleSoft</description>
    <inlineHelpText>Deposit Invoice has been created using MuleSoft</inlineHelpText>
    <label>Deposit Invoice Created</label>
    <type>Checkbox</type>
</CustomField>