force-app/main/default/objects/Opportunity/fields/Final_Advice_to_Increase_Program_Value__c.field-meta.xml
<CustomField>
    <fullName>Final_Advice_to_Increase_Program_Value__c</fullName>
    <label>Final: Advice to Increase Program Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>