force-app/main/default/objects/Opportunity/fields/Final_Debriefed__c.field-meta.xml
<CustomField>
    <fullName>Final_Debriefed__c</fullName>
    <inlineHelpText>after every session</inlineHelpText>
    <label>Final: Debriefed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Every session</fullName>
            </value>
            <value>
                <fullName>Sometimes</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>