force-app/main/default/objects/Opportunity/fields/First_Debrief_Comment_b2c__c.field-meta.xml
<CustomField>
    <fullName>First_Debrief_Comment_b2c__c</fullName>
    <inlineHelpText>Any additional comments, suggestions or feedback?</inlineHelpText>
    <label>First Debrief Comment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>