force-app/main/default/objects/Opportunity/fields/First_Debriefed__c.field-meta.xml
<CustomField>
    <fullName>First_Debriefed__c</fullName>
    <inlineHelpText>Were you debriefed after every session?</inlineHelpText>
    <label>First: Debriefed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Every Session</fullName>
            </value>
            <value>
                <fullName>Sometimes</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>