force-app/main/default/objects/Opportunity/fields/First_Program_Enhancements__c.field-meta.xml
<CustomField>
    <fullName>First_Program_Enhancements__c</fullName>
    <inlineHelpText>What advice would you give us to increase the value of the program?</inlineHelpText>
    <label>First: Program Enhancements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>