force-app/main/default/objects/Opportunity/fields/First_Program_Impact__c.field-meta.xml
<CustomField>
    <fullName>First_Program_Impact__c</fullName>
    <inlineHelpText>Have you noticed changes in your child since the program began?</inlineHelpText>
    <label>First: Program Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>