force-app/main/default/objects/Opportunity/fields/Has_Opportunity_Products__c.field-meta.xml
<CustomField>
    <fullName>Has_Opportunity_Products__c</fullName>
    <label>Has Opportunity Products</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>