force-app/main/default/objects/Opportunity/fields/Invoice_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Due_Date__c</fullName>
    <description>Breadwinner Invoice date + 10 days</description>
    <formula>IF(TEXT(Business_Unit_2__c) = &apos;Elevate UK&apos;, TODAY() + 14, TODAY() + 10)</formula>
    <label>Invoice Due Date</label>
    <type>Date</type>
</CustomField>