force-app/main/default/objects/Opportunity/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <description>Further elaborate lost reason for close lost opportunity</description>
    <inlineHelpText>Further elaborate lost reason for close lost opportunity</inlineHelpText>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Do not see the value</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>Repeat</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Trial Opt Out</fullName>
            </value>
            <value>
                <fullName>Student not on board</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Tutoring</fullName>
            </value>
            <value>
                <fullName>Poor diagnostic</fullName>
            </value>
            <value>
                <fullName>No debrief</fullName>
            </value>
            <value>
                <fullName>Timing</fullName>
            </value>
            <value>
                <fullName>No Reason Provided</fullName>
            </value>
            <value>
                <fullName>Ghosted</fullName>
            </value>
            <value>
                <fullName>NDIS Funding</fullName>
            </value>
            <value>
                <fullName>Can&apos;t Service</fullName>
            </value>
            <value>
                <fullName>Didn&apos;t Run Debrief with Parent</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Child Not Keen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>