force-app/main/default/objects/Opportunity/fields/Lost_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Details__c</fullName>
    <inlineHelpText>Details for selected lost reason</inlineHelpText>
    <label>Lost Reason Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>