force-app/main/default/objects/Opportunity/fields/Meeting_Cancellation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Cancellation_Comments__c</fullName>
    <label>Meeting Cancellation Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>