force-app/main/default/objects/Opportunity/fields/Meeting_Reschedule_status__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Reschedule_status__c</fullName>
    <label>Meeting Reschedule Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Reach Out Later</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>