force-app/main/default/objects/Opportunity/fields/Mid_Advice_to_increase_program_value__c.field-meta.xml
<CustomField>
    <fullName>Mid_Advice_to_increase_program_value__c</fullName>
    <label>Mid: Advice to Increase Program Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>