force-app/main/default/objects/Opportunity/fields/Mid_Debriefed__c.field-meta.xml
<CustomField>
    <fullName>Mid_Debriefed__c</fullName>
    <inlineHelpText>After every session</inlineHelpText>
    <label>Mid: Debriefed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Every Session</fullName>
            </value>
            <value>
                <fullName>Sometimes</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>