force-app/main/default/objects/Opportunity/fields/Mid_Parental_Awareness__c.field-meta.xml
<CustomField>
    <fullName>Mid_Parental_Awareness__c</fullName>
    <inlineHelpText>How informed do you feel about the sessions and changes you should be seeing in your child outside the program?</inlineHelpText>
    <label>Mid: Parental Awareness</label>
    <length>255</length>
    <type>Text</type>
</CustomField>