force-app/main/default/objects/Opportunity/fields/Mid_Program_Impact_Comments__c.field-meta.xml
<CustomField>
    <fullName>Mid_Program_Impact_Comments__c</fullName>
    <inlineHelpText>What changes have you noticed in your child since the program began?</inlineHelpText>
    <label>Mid: Program Impact Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>