force-app/main/default/objects/Opportunity/fields/Mid_Recommendation_Likelihood__c.field-meta.xml
<CustomField>
    <fullName>Mid_Recommendation_Likelihood__c</fullName>
    <inlineHelpText>On a scale of 1-10, how likely are you to recommend the program to a friend?</inlineHelpText>
    <label>Mid: Recommendation Likelihood</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>