force-app/main/default/objects/Opportunity/fields/Parent_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>B2C only. Used to house Corporate account opps under one Parent opp for Sales reporting</description>
    <inlineHelpText>B2C only. Used to house Corporate account opps under one Parent opp for Sales reporting</inlineHelpText>
    <label>Parent Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Parent Opportunity)</relationshipLabel>
    <relationshipName>Child_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>