force-app/main/default/objects/Opportunity/fields/Pricebook_Year__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Year__c</fullName>
    <defaultValue>TEXT(YEAR(TODAY()))</defaultValue>
    <description>This is the year that comes up in a Quote document. The year used to choose the related pricebook.
NOTE: AB unticked &apos;restrict picklist to values in value set&apos; which has resolved a Cura webservice issue. 20/3/2024</description>
    <inlineHelpText>Choose the year to display in the Quote document (defaults to current year)</inlineHelpText>
    <label>Program Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2026</fullName>
            </value>
            <value>
                <fullName>2025-26</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>2024-25</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2023-24</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2022-23</fullName>
            </value>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>2021</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>2019</fullName>
            </value>
            <value>
                <fullName>2018</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>