force-app/main/default/objects/Opportunity/fields/Xero_Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>Xero_Invoice_ID__c</fullName>
    <description>This field was created to capture the ID of the invoice created by MuleSoft in Xero.</description>
    <inlineHelpText>ID of the invoice created by MuleSoft in Xero</inlineHelpText>
    <label>Xero Invoice ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>