force-app/main/default/objects/Opportunity/fields/Xero_Invoice_PATH__c.field-meta.xml
<CustomField>
    <fullName>Xero_Invoice_PATH__c</fullName>
    <description>This field was created to &apos;build&apos; the path for the POST Invoice step in MuleSoft Composer</description>
    <formula>&quot;api.xro/2.0/Invoices/&quot; &amp;  Xero_Invoice_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>path for the POST Invoice step in MuleSoft Composer</inlineHelpText>
    <label>Xero Invoice API PATH</label>
    <type>Text</type>
</CustomField>