force-app/main/default/objects/Opportunity/recordTypes/Cura.recordType-meta.xml
<RecordType>
    <fullName>Cura</fullName>
    <active>true</active>
    <businessProcess>Elevate B2B %27New Sales%27</businessProcess>
    <description>All Cura sales</description>
    <label>Cura</label>
</RecordType>