force-app/main/default/objects/Opportunity/recordTypes/District_Pitch.recordType-meta.xml
<RecordType>
    <fullName>District_Pitch</fullName>
    <active>true</active>
    <businessProcess>Elevate B2B %27District Pitches%27 %28US%29</businessProcess>
    <description>Elevate B2B &apos;district pitches&apos; (US only)</description>
    <label>Elevate B2B District Pitch</label>
</RecordType>