force-app/main/default/objects/Opportunity/recordTypes/Elevate_B2C.recordType-meta.xml
<RecordType>
    <fullName>Elevate_B2C</fullName>
    <active>true</active>
    <businessProcess>Elevate B2C %28Coaching%29</businessProcess>
    <description>Elevate B2C opportunities</description>
    <label>Elevate B2C</label>
</RecordType>