force-app/main/default/objects/Opportunity/recordTypes/Elevate_B2C_RMHC.recordType-meta.xml
<RecordType>
    <fullName>Elevate_B2C_RMHC</fullName>
    <active>true</active>
    <businessProcess>Elevate B2C %28Coaching%29</businessProcess>
    <description>Elevate B2C RMHC opportunities</description>
    <label>Elevate B2C RMHC</label>
</RecordType>