force-app/main/default/objects/Opportunity/recordTypes/Master.recordType-meta.xml
<RecordType>
    <fullName>Master</fullName>
    <active>true</active>
    <businessProcess>Master Sales Process %28ARCHIVED%29</businessProcess>
    <description>Legacy US process</description>
    <label>xx_ARCHIVED US Legacy</label>
</RecordType>