force-app/main/default/objects/Opportunity/recordTypes/Seminar.recordType-meta.xml
<RecordType>
    <fullName>Seminar</fullName>
    <active>true</active>
    <businessProcess>Elevate B2B %27New Sales%27</businessProcess>
    <description>Elevate B2B &apos;new sales&apos; opportunities</description>
    <label>Elevate B2B New Sales</label>
</RecordType>