force-app/main/default/objects/Opportunity/recordTypes/Seminar_Re_Sign.recordType-meta.xml
<RecordType>
    <fullName>Seminar_Re_Sign</fullName>
    <active>true</active>
    <businessProcess>Elevate B2B %27Re-sign%27</businessProcess>
    <description>Elevate B2B &apos;re-sign&apos; opportunities</description>
    <label>Elevate B2B Re-sign</label>
</RecordType>