force-app/main/default/objects/Opportunity/recordTypes/Target.recordType-meta.xml
<RecordType>
    <fullName>Target</fullName>
    <active>true</active>
    <businessProcess>Elevate B2B %27New Sales%27</businessProcess>
    <description>Sales budget and goal targets</description>
    <label>Target</label>
</RecordType>