force-app/main/default/objects/Opportunity/recordTypes/Tender.recordType-meta.xml
<RecordType>
    <fullName>Tender</fullName>
    <active>true</active>
    <businessProcess>Tenders</businessProcess>
    <description>Elevate B2B &apos;tender&apos; opportunities (eg GeBiz in Singapore)</description>
    <label>Tender</label>
</RecordType>