force-app/main/default/objects/Opportunity/validationRules/Add_Opp_Product_before_Closing.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_Opp_Product_before_Closing</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNEW()),
    ISPICKVAL(StageName, &quot;Closed Won&quot;),
    Has_Opportunity_Products__c = 0
)</errorConditionFormula>
    <errorMessage>Please add at least one Opportunity Product before saving as Closed Won</errorMessage>
</ValidationRule>