force-app/main/default/objects/Opportunity/validationRules/Closed_Opportunities_are_read_only.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Opportunities_are_read_only</fullName>
    <active>false</active>
    <description>Closed Opportunities cannot be updated</description>
    <errorConditionFormula>AND(
OR(ISPICKVAL(StageName, &quot;Closed Won&quot;),(ISPICKVAL(StageName, &quot;Closed Lost&quot;))), 
NOT(ISCHANGED(StageName)),
NOT(ISCHANGED( Total_Completed_Booking__c )),
NOT(ISCHANGED( Total_Booking__c))
)</errorConditionFormula>
    <errorMessage>Closed Opportunities cannot be updated.</errorMessage>
</ValidationRule>